force-app/main/default/objects/OrderItem/fields/ActivePrinciple__c.field-meta.xml
<CustomField>
    <fullName>ActivePrinciple__c</fullName>
    <formula>Product2.ActivePrinciple__c</formula>
    <label>Principio Ativo</label>
    <type>Text</type>
</CustomField>