force-app/main/default/objects/OrderItem/fields/AdditionAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor de acréscimo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>