force-app/main/default/objects/OrderItem/fields/AdditionPercent__c.field-meta.xml
<CustomField>
    <fullName>AdditionPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentual de acréscimo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>