force-app/main/default/objects/OrderItem/fields/AnticipationDiscount__c.field-meta.xml
<CustomField>
    <fullName>AnticipationDiscount__c</fullName>
    <description>Campo que marca se o produto teve algum desconto por antecipação. O valor deste campo será o desconto unitário X a quantidade.</description>
    <inlineHelpText>Campo que marca se o produto teve algum desconto por antecipação. O valor deste campo será o desconto unitário X a quantidade.</inlineHelpText>
    <label>Desconto de Antecipação</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>