force-app/main/default/objects/OrderItem/fields/AnticipationDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>AnticipationDiscountPercent__c</fullName>
    <label>Porcentagem de Antecipação de Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>