force-app/main/default/objects/OrderItem/fields/BilledQuantity__c.field-meta.xml
<CustomField>
    <fullName>BilledQuantity__c</fullName>
    <label>Quantidade Faturada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>