force-app/main/default/objects/OrderItem/fields/CalculatedInterest__c.field-meta.xml
<CustomField>
    <fullName>CalculatedInterest__c</fullName>
    <description>Campo para armazenar o juros calculado.</description>
    <inlineHelpText>Campo para armazenar o juros calculado.</inlineHelpText>
    <label>Juros Calculado</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>