force-app/main/default/objects/OrderItem/fields/CampaignIndustryPercent__c.field-meta.xml
<CustomField>
    <fullName>CampaignIndustryPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentual de Campanha (Industria)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>