force-app/main/default/objects/OrderItem/fields/CampaignPercent__c.field-meta.xml
<CustomField>
    <fullName>CampaignPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentual de Campanha</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>