force-app/main/default/objects/OrderItem/fields/CampaigPercent__c.field-meta.xml
<CustomField>
    <fullName>CampaigPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentual de Campanha (ForcaAgro)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>