force-app/main/default/objects/OrderItem/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>