force-app/main/default/objects/OrderItem/fields/CheckPriceError__c.field-meta.xml
<CustomField>
    <fullName>CheckPriceError__c</fullName>
    <formula>UnitPrice + DiscountAmount__c + AnticipationDiscount__c - InterestValue__c - AdditionAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Erro de Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>