force-app/main/default/objects/OrderItem/fields/CommercialApproval__c.field-meta.xml
<CustomField>
    <fullName>CommercialApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação Comercial</label>
    <type>Checkbox</type>
</CustomField>