force-app/main/default/objects/OrderItem/fields/ContainStockError__c.field-meta.xml
<CustomField>
    <fullName>ContainStockError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica se o produto tem algum tipo de erro de estoque.</description>
    <inlineHelpText>Campo que indica se o produto tem algum tipo de erro de estoque.</inlineHelpText>
    <label>Contem Erro Estoque?</label>
    <type>Checkbox</type>
</CustomField>