force-app/main/default/objects/OrderItem/fields/ContractOrderItem__c.field-meta.xml
<CustomField>
    <fullName>ContractOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do Pedido Contrato</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>Produtos_do_pedido</relationshipName>
    <type>Lookup</type>
</CustomField>