force-app/main/default/objects/OrderItem/fields/ContractProductCredit__c.field-meta.xml
<CustomField>
    <fullName>ContractProductCredit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saldo Restante em Contrato</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>