force-app/main/default/objects/OrderItem/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Custo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>