force-app/main/default/objects/OrderItem/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Culture__c</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>