force-app/main/default/objects/OrderItem/fields/CustomListPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomListPrice__c</fullName>
    <label>Preço de Lista</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>