force-app/main/default/objects/OrderItem/fields/DeletedProductSAP__c.field-meta.xml
<CustomField>
    <fullName>DeletedProductSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Produto marcado para exclusão?</description>
    <inlineHelpText>Produto marcado para exclusão?</inlineHelpText>
    <label>DeletedProductSAP</label>
    <type>Checkbox</type>
</CustomField>