force-app/main/default/objects/OrderItem/fields/DeletedSAP__c.field-meta.xml
<CustomField>
    <fullName>DeletedSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Produto apagado no SAP</description>
    <inlineHelpText>Produto apagado no SAP</inlineHelpText>
    <label>Produto apagado no SAP</label>
    <type>Checkbox</type>
</CustomField>