force-app/main/default/objects/OrderItem/fields/DestinationCity__c.field-meta.xml
<CustomField>
    <fullName>DestinationCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade de Destino</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Produtos do pedido (Cidade de Destino)</relationshipLabel>
    <relationshipName>DestinationCityOrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>