force-app/main/default/objects/OrderItem/fields/DirectFamilyMargin__c.field-meta.xml
<CustomField>
    <fullName>DirectFamilyMargin__c</fullName>
    <label>Margem Direta da Familia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>