force-app/main/default/objects/OrderItem/fields/DirectMargin__c.field-meta.xml
<CustomField>
    <fullName>DirectMargin__c</fullName>
    <label>Margem Direta do Produto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>