force-app/main/default/objects/OrderItem/fields/DirectOrderMargin__c.field-meta.xml
<CustomField>
    <fullName>DirectOrderMargin__c</fullName>
    <formula>Order.DirectMargin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem Direta Pedido</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>