force-app/main/default/objects/OrderItem/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>Valor Desconto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>