force-app/main/default/objects/OrderItem/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <label>Percentual de desconto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>