force-app/main/default/objects/OrderItem/fields/FamilyMargin__c.field-meta.xml
<CustomField>
    <fullName>FamilyMargin__c</fullName>
    <label>Margem Recomposta da Familia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>