force-app/main/default/objects/OrderItem/fields/FinancialApproval__c.field-meta.xml
<CustomField>
    <fullName>FinancialApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação Financeira</label>
    <type>Checkbox</type>
</CustomField>