force-app/main/default/objects/OrderItem/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Modalidade Frete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sem frete</fullName>
                <default>true</default>
                <label>Sem frete</label>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>