force-app/main/default/objects/OrderItem/fields/FreightValue__c.field-meta.xml
<CustomField>
    <fullName>FreightValue__c</fullName>
    <label>Valor Frete</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>