force-app/main/default/objects/OrderItem/fields/FreightValuePerTon__c.field-meta.xml
<CustomField>
    <fullName>FreightValuePerTon__c</fullName>
    <label>Valor de Frete por tonelada</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>