force-app/main/default/objects/OrderItem/fields/HasRefuseReason__c.field-meta.xml
<CustomField>
    <fullName>HasRefuseReason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem motivo de recusa</label>
    <type>Checkbox</type>
</CustomField>