force-app/main/default/objects/OrderItem/fields/Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms1__c</fullName>
    <label>Incoterms1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>