force-app/main/default/objects/OrderItem/fields/Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms2__c</fullName>
    <label>Incoterms2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>