force-app/main/default/objects/OrderItem/fields/InterestOrAntecipationDiscount__c.field-meta.xml
<CustomField>
    <fullName>InterestOrAntecipationDiscount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que armazena o valor de juros caso a data de pagamento seja posterior a data efetiva ou o desconto de antecipação caso a data de pagamento seja inferior a data efetiva do catálogo de preço.</description>
    <inlineHelpText>Campo que armazena o valor de juros caso a data de pagamento seja posterior a data efetiva ou o desconto de antecipação caso a data de pagamento seja inferior a data efetiva do catálogo de preço.</inlineHelpText>
    <label>Juros ou Desconto de antecipação</label>
    <referenceTo>ListPrice__c</referenceTo>
    <relationshipLabel>Produtos do pedido (Juros ou Desconto de antecipação)</relationshipLabel>
    <relationshipName>ProductsInterestOrAntecipationDiscount</relationshipName>
    <type>Lookup</type>
</CustomField>