force-app/main/default/objects/OrderItem/fields/InterestValue__c.field-meta.xml
<CustomField>
    <fullName>InterestValue__c</fullName>
    <label>Valor do juros</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>