force-app/main/default/objects/OrderItem/fields/InterestValuePercent__c.field-meta.xml
<CustomField>
    <fullName>InterestValuePercent__c</fullName>
    <label>Porcentagem de Desconto de Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>