force-app/main/default/objects/OrderItem/fields/InvalidCost__c.field-meta.xml
<CustomField>
    <fullName>InvalidCost__c</fullName>
    <formula>Cost__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custo Invalido?</label>
    <type>Checkbox</type>
</CustomField>