force-app/main/default/objects/OrderItem/fields/LastChangedPriceList__c.field-meta.xml
<CustomField>
    <fullName>LastChangedPriceList__c</fullName>
    <description>Toda vez que um produto do pedido for inserido dentro da tela, é colocado a data do dia dentro do campo</description>
    <label>Ultima Data Lista de Preço</label>
    <type>Date</type>
</CustomField>