force-app/main/default/objects/OrderItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Catálogo de preço</label>
    <referenceTo>ListPrice__c</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>