force-app/main/default/objects/OrderItem/fields/ListPriceWithoutInterest__c.field-meta.xml
<CustomField>
    <fullName>ListPriceWithoutInterest__c</fullName>
    <label>Preço de Lista sem Juros</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>