force-app/main/default/objects/OrderItem/fields/LowerMargin__c.field-meta.xml
<CustomField>
    <fullName>LowerMargin__c</fullName>
    <formula>DirectFamilyMargin__c &lt; ProjectedMargin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abaixo da margem Projetada?</label>
    <type>Checkbox</type>
</CustomField>