force-app/main/default/objects/OrderItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margem Recomposta do Produto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>