force-app/main/default/objects/OrderItem/fields/OfferDiscount__c.field-meta.xml
<CustomField>
    <fullName>OfferDiscount__c</fullName>
    <label>Desconto Oferta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>