force-app/main/default/objects/OrderItem/fields/OrderMargin__c.field-meta.xml
<CustomField>
    <fullName>OrderMargin__c</fullName>
    <formula>Order.Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem Recomposta Pedido</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>