force-app/main/default/objects/OrderItem/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <formula>IF(ISBLANK(TEXT(Order.Type)), &apos;SFOR&apos;, TEXT(Order.Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do Pedido</label>
    <type>Text</type>
</CustomField>