force-app/main/default/objects/OrderItem/fields/OriginalListPrice__c.field-meta.xml
<CustomField>
    <fullName>OriginalListPrice__c</fullName>
    <label>Preço de Lista Original</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>