force-app/main/default/objects/OrderItem/fields/PriceError__c.field-meta.xml
<CustomField>
    <fullName>PriceError__c</fullName>
    <formula>AND(NOT(ISBLANK(ListPrice__c)), OR(CheckPriceError__c &gt;= ListPriceWithoutInterest__c + 1, CheckPriceError__c &lt;= ListPriceWithoutInterest__c - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erro de Preço</label>
    <type>Checkbox</type>
</CustomField>