force-app/main/default/objects/OrderItem/fields/PriceListEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PriceListEffectiveDate__c</fullName>
    <label>Data efetiva da lista de preço</label>
    <type>Date</type>
</CustomField>