force-app/main/default/objects/OrderItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <formula>CASESAFEID(Product2.Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia do produto</label>
    <type>Text</type>
</CustomField>