force-app/main/default/objects/OrderItem/fields/ProductFamilyName__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyName__c</fullName>
    <formula>Product2.Family__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Familia do produto</label>
    <type>Text</type>
</CustomField>