force-app/main/default/objects/OrderItem/fields/ProjectedMargin__c.field-meta.xml
<CustomField>
    <fullName>ProjectedMargin__c</fullName>
    <label>Margem Projetada</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>