force-app/main/default/objects/OrderItem/fields/QuantityToBill__c.field-meta.xml
<CustomField>
    <fullName>QuantityToBill__c</fullName>
    <description>Quantidade á faturar.</description>
    <formula>IF(ISPICKVAL(Status__c, 'X'), 0, (Quantity - BilledQuantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantidade á faturar.</inlineHelpText>
    <label>Quantidade á faturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>