force-app/main/default/objects/OrderItem/fields/RefuseCredit__c.field-meta.xml
<CustomField>
    <fullName>RefuseCredit__c</fullName>
    <description>Campo para armazenar quantidade que já foi realocada em outro Pedido</description>
    <label>Saldo Realocado</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>