force-app/main/default/objects/OrderItem/fields/RefuseQuantity__c.field-meta.xml
<CustomField>
    <fullName>RefuseQuantity__c</fullName>
    <description>Quantidade recusada dentro do SAP.</description>
    <formula>IF(ISPICKVAL(Status__c, 'X'), Quantity - BilledQuantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantidade recusada dentro do SAP.</inlineHelpText>
    <label>Quantidade Recusada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>