force-app/main/default/objects/OrderItem/fields/SourceCity__c.field-meta.xml
<CustomField>
    <fullName>SourceCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade de Origem</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Produtos do pedido (Cidade de Origem)</relationshipLabel>
    <relationshipName>SourceCityOrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>