force-app/main/default/objects/OrderItem/fields/TotalAdditionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAdditionAmount__c</fullName>
    <formula>Quantity  *  AdditionAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total de acréscimo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>