force-app/main/default/objects/OrderItem/fields/TotalAnticipationDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalAnticipationDiscount__c</fullName>
    <formula>Quantity  *  AnticipationDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total do Desconto de Antecipação</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>