force-app/main/default/objects/OrderItem/fields/TotalBilledValue__c.field-meta.xml
<CustomField>
    <fullName>TotalBilledValue__c</fullName>
    <description>Valor faturado.</description>
    <formula>BilledQuantity__c * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor faturado.</inlineHelpText>
    <label>Valor faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>