force-app/main/default/objects/OrderItem/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <description>Valor total do desconto ( desconto unitário * quantidade ).</description>
    <formula>Quantity *  DiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor total do desconto ( desconto unitário * quantidade ).</inlineHelpText>
    <label>Valor Total do Desconto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>