force-app/main/default/objects/OrderItem/fields/TotalInterestValue__c.field-meta.xml
<CustomField>
    <fullName>TotalInterestValue__c</fullName>
    <formula>Quantity * InterestValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total do Juros</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>