force-app/main/default/objects/OrderItem/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <description>Campo de preço total que utiliza a seguinte fórmula : Preço unitário * Quantidade total.</description>
    <formula>(UnitPrice *  Quantity__c) +  FreightValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo de preço total que utiliza a seguinte fórmula : Preço unitário * Quantidade total.</inlineHelpText>
    <label>Preço total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>