force-app/main/default/objects/OrderItem/fields/TotalRefuseValue__c.field-meta.xml
<CustomField>
    <fullName>TotalRefuseValue__c</fullName>
    <description>Valor Recusado.</description>
    <formula>RefuseQuantity__c * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor Recusado.</inlineHelpText>
    <label>Valor Recusado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>