force-app/main/default/objects/OrderItem/fields/TotalValueToBill__c.field-meta.xml
<CustomField>
    <fullName>TotalValueToBill__c</fullName>
    <description>Valor á faturar.</description>
    <formula>QuantityToBill__c * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor á faturar.</inlineHelpText>
    <label>Valor á faturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>