force-app/main/default/objects/OrderItem/fields/UnitPriceWithoutCampaign__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceWithoutCampaign__c</fullName>
    <formula>UnitPrice * (1+(CampaignPercent__c/100)) </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Unitario Sem Campanha</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>